# mysql-c-driver

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.c
include/: handshake_manager.h  mysql.h  structures.h  tcp_manager.h
libs/: sha256.c
src/: handshake_manager.c  mysql.c  tcp_manager.c
